src/document/c_api.h

typedef struct soda_change soda_change;
SODA_DOCUMENT_API void soda_change_destroy(soda_change* change);
SODA_DOCUMENT_API uint64_t soda_change_old_revision(const soda_change* change);
SODA_DOCUMENT_API uint64_t soda_change_new_revision(const soda_change* change);
SODA_DOCUMENT_API uint32_t soda_change_edit_count(const soda_change* change);
SODA_DOCUMENT_API uint32_t soda_change_edit_start(const soda_change* change, uint32_t edit_index);
SODA_DOCUMENT_API uint32_t soda_change_edit_end(const soda_change* change, uint32_t edit_index);
SODA_DOCUMENT_API uint32_t soda_change_edit_text_size(const soda_change* change,
                                                      uint32_t edit_index);
SODA_DOCUMENT_API int soda_change_copy_edit_text(const soda_change* change, uint32_t edit_index,
                                                 uint8_t* destination, size_t capacity);
SODA_DOCUMENT_API uint32_t soda_change_affected_old_start(const soda_change* change);
SODA_DOCUMENT_API uint32_t soda_change_affected_old_end(const soda_change* change);
SODA_DOCUMENT_API uint32_t soda_change_affected_new_start(const soda_change* change);
SODA_DOCUMENT_API uint32_t soda_change_affected_new_end(const soda_change* change);