scheme/soda/document.sls


  (define %change-destroy
    (foreign-procedure __atomic "soda_change_destroy" (void*) void))
  (define %change-old-revision
    (foreign-procedure __atomic "soda_change_old_revision" (void*) unsigned-64))
  (define %change-new-revision
    (foreign-procedure __atomic "soda_change_new_revision" (void*) unsigned-64))
  (define %change-edit-count
    (foreign-procedure __atomic "soda_change_edit_count" (void*) unsigned-32))
  (define %change-edit-start
    (foreign-procedure __atomic "soda_change_edit_start"
                       (void* unsigned-32)
                       unsigned-32))
  (define %change-edit-end
    (foreign-procedure __atomic "soda_change_edit_end"
                       (void* unsigned-32)
                       unsigned-32))
  (define %change-edit-text-size
    (foreign-procedure __atomic "soda_change_edit_text_size"
                       (void* unsigned-32)
                       unsigned-32))
  (define %change-copy-edit-text
    (foreign-procedure __atomic "soda_change_copy_edit_text"
                       (void* unsigned-32 u8* size_t)
                       int))
  (define %change-affected-old-start
    (foreign-procedure __atomic "soda_change_affected_old_start" (void*) unsigned-32))
  (define %change-affected-old-end
    (foreign-procedure __atomic "soda_change_affected_old_end" (void*) unsigned-32))
  (define %change-affected-new-start
    (foreign-procedure __atomic "soda_change_affected_new_start" (void*) unsigned-32))
  (define %change-affected-new-end
    (foreign-procedure __atomic "soda_change_affected_new_end" (void*) unsigned-32))

  (define (native-error who)
    (error who (%last-error)))

  (define (null-pointer? pointer)
    (or (not pointer)
        (and (integer? pointer) (zero? pointer))))

  (define (check-status who status)
    (when (negative? status)
      (native-error who)))

  (define (check-pointer who pointer)
    (when (null-pointer? pointer)
      (native-error who))
    pointer)

  (define (check-revision who revision)
    (if (= revision revision-none)
        (native-error who)
        revision))

  (define (as-bytevector who value)
    (cond
      [(bytevector? value) value]
      [(string? value) (string->utf8 value)]
      [else (assertion-violation who "expected a bytevector or string" value)]))

  (define (require-open who predicate pointer value)
    (unless (predicate value)
      (assertion-violation who "unexpected handle type" value))
    (when (null-pointer? (pointer value))
      (assertion-violation who "handle is closed" value)))

  (define (bytevector->text data)
    (let ([data (as-bytevector 'bytevector->text data)])
      (%make-text
        (check-pointer 'bytevector->text
                       (%text-create data (bytevector-length data))))))

  (define (string->text value)
    (bytevector->text (as-bytevector 'string->text value)))

  (define (text-close! value)
    (when (and (text? value)
               (not (null-pointer? (text-pointer value))))
      (%text-destroy (text-pointer value))
      (text-pointer-set! value #f)))

  (define (text-size value)
    (require-open 'text-size text? text-pointer value)
    (let ([size (%text-size (text-pointer value))])
      (if (= size text-npos) (native-error 'text-size) size)))

  (define (text-line-count value)
    (require-open 'text-line-count text? text-pointer value)
    (let ([count (%text-line-count (text-pointer value))])
      (if (zero? count) (native-error 'text-line-count) count)))

  (define (text-utf16-size value)
    (require-open 'text-utf16-size text? text-pointer value)
    (let ([size (%text-utf16-size (text-pointer value))])
      (if (= size text-npos) (native-error 'text-utf16-size) size)))

  (define (text-subbytevector value start end)
    (require-open 'text-subbytevector text? text-pointer value)
    (when (> start end)
      (assertion-violation 'text-subbytevector "start is greater than end" start end))
    (let ([output (make-bytevector (- end start))])
      (check-status
        'text-subbytevector
        (%text-copy (text-pointer value) start end output (bytevector-length output)))
      output))

  (define (text->bytevector value)
    (text-subbytevector value 0 (text-size value)))

  (define (text-byte-at value offset)
    (require-open 'text-byte-at text? text-pointer value)
    (let ([byte (%text-byte-at (text-pointer value) offset)])
      (if (negative? byte) (native-error 'text-byte-at) byte)))

  (define (text-previous-character-offset value offset)
    (if (zero? offset)
        0
        (let loop ([candidate (- offset 1)])
          (if (or
                (zero? candidate)
                (not
                  (= (bitwise-and
                       (text-byte-at value candidate)
                       #xc0)
                     #x80)))
              candidate
              (loop (- candidate 1))))))

  (define (text-next-character-offset value offset)
    (let ([size (text-size value)])
      (if (>= offset size)
          size
          (let loop ([candidate (+ offset 1)])
            (if (or
                  (>= candidate size)
                  (not
                    (= (bitwise-and
                         (text-byte-at value candidate)
                         #xc0)
                       #x80)))
                candidate
                (loop (+ candidate 1)))))))

  (define (checked-text-offset who operation)
    (let ([offset (operation)])
      (if (= offset text-npos) (native-error who) offset)))

  (define (text-line-start value line)
    (require-open 'text-line-start text? text-pointer value)
    (checked-text-offset
      'text-line-start
      (lambda () (%text-line-start (text-pointer value) line))))

  (define (text-line-content-end value line)
    (require-open 'text-line-content-end text? text-pointer value)
    (checked-text-offset
      'text-line-content-end
      (lambda () (%text-line-content-end (text-pointer value) line))))

  (define (text-position value offset)
    (require-open 'text-position text? text-pointer value)
    (let ([line (foreign-alloc 4)]
          [column (foreign-alloc 4)])
      (dynamic-wind
        (lambda () (void))
        (lambda ()
          (check-status
            'text-position
            (%text-position (text-pointer value) offset line column))
          (cons (foreign-ref 'unsigned-32 line 0)
                (foreign-ref 'unsigned-32 column 0)))
        (lambda ()
          (foreign-free line)
          (foreign-free column)))))

  (define (text-offset value line byte-column)
    (require-open 'text-offset text? text-pointer value)
    (checked-text-offset
      'text-offset
      (lambda () (%text-offset (text-pointer value) line byte-column))))

  (define (text-utf16-offset value offset)
    (require-open 'text-utf16-offset text? text-pointer value)
    (checked-text-offset
      'text-utf16-offset
      (lambda () (%text-utf16-offset (text-pointer value) offset))))

  (define (text-offset-at-utf16 value offset)
    (require-open 'text-offset-at-utf16 text? text-pointer value)
    (checked-text-offset
      'text-offset-at-utf16
      (lambda () (%text-offset-at-utf16 (text-pointer value) offset))))

  (define make-document
    (case-lambda
      [(data) (make-document data 0)]
      [(data id)
       (let ([data (as-bytevector 'make-document data)])
         (%make-document
           (check-pointer
             'make-document
             (%document-create data (bytevector-length data) id))))]))

  (define make-document-from-text
    (lambda (value id)
      (require-open 'text->document text? text-pointer value)
      (%make-document
        (check-pointer
          'text->document
          (%document-create-from-text (text-pointer value) id)))))

  (define text->document
    (case-lambda
      [(value) (make-document-from-text value 0)]
      [(value id) (make-document-from-text value id)]))

  (define (document-close! value)
    (when (and (document? value)
               (not (null-pointer? (document-pointer value))))
      (%document-destroy (document-pointer value))
      (document-pointer-set! value #f)))

  (define (document-id value)
    (require-open 'document-id document? document-pointer value)
    (%document-id (document-pointer value)))

  (define (document-revision value)
    (require-open 'document-revision document? document-pointer value)
    (check-revision
      'document-revision
      (%document-revision (document-pointer value))))

  (define (document-snapshot value)
    (require-open 'document-snapshot document? document-pointer value)
    (%make-snapshot
      (check-pointer 'document-snapshot
                     (%document-snapshot (document-pointer value)))))

  (define (document-begin-transaction value)
    (require-open 'document-begin-transaction document? document-pointer value)
    (%make-transaction
      (check-pointer 'document-begin-transaction
                     (%document-begin (document-pointer value)))))

  (define (native-boolean who value)
    (if (negative? value) (native-error who) (not (zero? value))))

  (define (document-can-undo? value)
    (require-open 'document-can-undo? document? document-pointer value)
    (native-boolean 'document-can-undo?
                    (%document-can-undo (document-pointer value))))

  (define (document-can-redo? value)
    (require-open 'document-can-redo? document? document-pointer value)
    (native-boolean 'document-can-redo?
                    (%document-can-redo (document-pointer value))))

  (define (optional-change who pointer)
    (if (null-pointer? pointer)
        (let ([message (%last-error)])
          (if (string=? message "") #f (error who message)))
        (%make-change pointer)))

  (define (document-undo! value)
    (require-open 'document-undo! document? document-pointer value)
    (optional-change 'document-undo! (%document-undo (document-pointer value))))

  (define (document-redo! value)
    (require-open 'document-redo! document? document-pointer value)
    (optional-change 'document-redo! (%document-redo (document-pointer value))))

  (define (document-undo-to! value node)
    (require-open 'document-undo-to! document? document-pointer value)
    (%make-change
      (check-pointer 'document-undo-to!
                     (%document-undo-to (document-pointer value) node))))

  (define (document-undo-position value)
    (require-open 'document-undo-position document? document-pointer value)
    (%document-undo-position (document-pointer value)))

  (define (document-undo-node-count value)
    (require-open 'document-undo-node-count document? document-pointer value)
    (%document-undo-node-count (document-pointer value)))

  (define (document-undo-parent value node)
    (require-open 'document-undo-parent document? document-pointer value)
    (let ([parent (%document-undo-parent (document-pointer value) node)])
      (if (= parent undo-node-none)
          (let ([message (%last-error)])
            (if (string=? message "") #f (error 'document-undo-parent message)))
          parent)))

  (define (document-undo-children value node)
    (require-open 'document-undo-children document? document-pointer value)
    (let* ([count (%document-undo-child-count (document-pointer value) node)]
           [message (%last-error)])
      (unless (string=? message "")
        (error 'document-undo-children message))
      (do ([index 0 (+ index 1)]
           [children '()
                     (let ([child (%document-undo-child
                                    (document-pointer value)
                                    node
                                    index)])
                       (if (= child undo-node-none)
                           (native-error 'document-undo-children)
                           (cons child children)))])
          ((= index count) (reverse children)))))
